--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPELcpNl+GNGlV0j3TVMsl",
+      "authorship_tag": "ABX9TyMAhQI7RBKye72kMKhyE+Ad",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -557,6 +557,39 @@
       ],
       "metadata": {
         "id": "GnsuvY3DIwMx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra 2: S2 Explorar os Dados**\n",
+        "\n",
+        "Entender os dados é a fase que permite você entender qual a melhor abordagem, melhor modelo, melhores features para serem usadas.\n",
+        "\n",
+        "Todos os insights devem ser anotados e documentados da melhor maneira possível. Alguns questionamentos a serem feitos são:\n",
+        "\n",
+        "Qual o número de amostras?\n",
+        "\n",
+        "Qual o número total de classes?\n",
+        "\n",
+        "O dataset está balanceado?\n",
+        "\n",
+        "Quais variáveis são categóricas ou numéricas?\n",
+        "\n",
+        "Qual a porcentagem de valores ausentes?\n",
+        "\n",
+        "Há outliers presentes?\n",
+        "\n",
+        "Qual o tipo de distribuição das suas variáveis?\n",
+        "\n",
+        "Qual a variável alvo?\n",
+        "\n",
+        "Existe correlação entre as variáveis?\n",
+        "\n",
+        "Quais transformações são aplicáveis, começando a raciocinar com o nosso modelo?"
+      ],
+      "metadata": {
+        "id": "6CaWYySCKMkB"
       }
     },
     {
