--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAhQI7RBKye72kMKhyE+Ad",
+      "authorship_tag": "ABX9TyP9vCvqErK1zjE49169NWSk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -597,7 +597,11 @@
       "source": [
         "## **Referências**\n",
         "\n",
-        "[Guideline do Google](https://developers.google.com/machine-learning/guides/text-classification)"
+        "[Guideline do Google](https://developers.google.com/machine-learning/guides/text-classification)\n",
+        "\n",
+        "[Microsoft Azure Machine Learning Algorithm Cheat Sheet](https://docs.microsoft.com/en-gb/azure/machine-learning/media/algorithm-cheat-sheet/machine-learning-algorithm-cheat-sheet.svg)\n",
+        "\n",
+        "[How to Choose the Best Machine Learning Model?](hhttps://mamarih1.medium.com/how-to-choose-the-best-machine-learning-model-e1dbb46bdd4d)"
       ],
       "metadata": {
         "id": "_mFL-bHRI2bZ"
