--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP9vCvqErK1zjE49169NWSk",
+      "authorship_tag": "ABX9TyM3lQo5mJr2YWLqoL11mXVE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -562,7 +562,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Extra 2: S2 Explorar os Dados**\n",
+        "## **S2 Explorar os Dados**\n",
         "\n",
         "Entender os dados é a fase que permite você entender qual a melhor abordagem, melhor modelo, melhores features para serem usadas.\n",
         "\n",
@@ -590,6 +590,56 @@
       ],
       "metadata": {
         "id": "6CaWYySCKMkB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **S2.5 - Escolher o Modelo**\n",
+        "\n",
+        "Baseado nas observações e métricas identificadas nas etapas anteriores, você começa a ter uma ideia de qual modelo seria mais adequado ao problema que você está atacando.\n",
+        "\n",
+        "\n",
+        "Obviamente, depende muito da experiência e conhecimento, mas existem alguns guias que ajudam na escolha do algoritmo.\n",
+        "\n",
+        "\n",
+        "Veja o material que está em anexo na aula."
+      ],
+      "metadata": {
+        "id": "oZiffx5qJA36"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **S3 - Preparar os Dados**\n",
+        "\n",
+        "Existem várias transformações que podem ser possíveis, mas às vezes fica confuso quais devemos fazer. Gosto de dividir entre transformações obrigatórias e transformações opcionais:\n",
+        "\n",
+        "Transformações obrigatórias\n",
+        "Converter dados não numéricos em numéricos, pois você não vai conseguir realizar operações vetorizadas sem converter strings, por exemplo, em variáveis numéricas.\n",
+        "\n",
+        "Redimensionar inputs para valores fixos, pois o seu modelo espera ser alimentado sempre da mesma maneira.\n",
+        "\n",
+        "Lidar com os valores ausentes, seja excluindo as entradas ou substituindo seus valores\n",
+        "Remoção de outliers, uma vez que eles irão dar um viés ao nosso modelo.\n",
+        "Transformações opcionais\n",
+        "Normalizar ou padronizar as features, dependendo do modelo e demandas específicas.\n",
+        "\n",
+        "Tratamento adequado de strings, como deixar todos os caracteres em minúsculo.\n",
+        "Criar um fluxo para deixar o dataset sempre anônimo.\n",
+        "Reduzir a dimensionalidade do problema, dependendo da quantidade e qualidade das suas features.\n",
+        "Criar novas variáveis, buscando técnicas de feature engineering."
+      ],
+      "metadata": {
+        "id": "RygidtIRJJ-6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "gT29bISMJhjy"
       }
     },
     {
