--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3lQo5mJr2YWLqoL11mXVE",
+      "authorship_tag": "ABX9TyNnMfXRLHpeS7gq57Ph3q7r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -637,9 +637,36 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "## **S4 - Construir, Treinar e Avaliar seu modelo**\n",
+        "\n",
+        "Você pode construir um modelo baseline, ou seja, um modelo bem básico para ser o seu parâmetro de desempenho.\n",
+        "\n",
+        "É comum muitos cientistas de dados pegarem apenas as variáveis numéricas e não se preocuparem com feature engineering ou codificação de variáveis categóricas. Como eu disse, um baseline é opcional, mas muito bem-vindo.\n",
+        "\n",
+        "Você deve entender as melhores métricas desde já, para realizar testes com vários modelos diferentes. O desempenho deles pode ser inferido pelo cross-validation.\n",
+        "\n",
+        "O modelo de melhor desempenho, de acordo com o cross-validation, será escolhido e poderemos melhorar ainda mais o desempenho dele.\n",
+        "\n",
+        "Detalhe, esse modelo final deve ser treinado em cima do dataset de treino completo. Como ele ainda não teve contato com os dados de teste, a avaliação final será feita com eles."
+      ],
       "metadata": {
         "id": "gT29bISMJhjy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **S5 - Otimizar os Hiperparâmetros**\n",
+        "\n",
+        "Cada modelo tem a sua especificidade. Você deve conhecer cada parâmetro e o quanto ele impacta no desempenho e nas variáveis.\n",
+        "\n",
+        "Um modelo de Regressão Logística, por exemplo, tem muito pouca coisa a ser feito nesta etapa. Já um modelo classificador XGBoost, precisa que você siga determinadas etapas de otimização, a fim de não resultar em overfitting ou piora no desempenho. hyperparameters tunning é uma arte, porém com método.\n",
+        "\n",
+        "Lembre-se, evite usar os dados de teste ao trabalhar com Grid Search."
+      ],
+      "metadata": {
+        "id": "tt6_28l0KNSz"
       }
     },
     {
