--- a/42_Workflow_para_Machine_Learning.ipynb
+++ b/42_Workflow_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnMfXRLHpeS7gq57Ph3q7r",
+      "authorship_tag": "ABX9TyO3fqrFKh0O8ug9E3O7xVU3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -667,6 +667,23 @@
       ],
       "metadata": {
         "id": "tt6_28l0KNSz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **S6 Deploy do Modelo**\n",
+        "\n",
+        "Deploy significar colocar o modelo em produção. Isso pode ser tão simples como disponibilizar uma API para ser consumida (que retorna as previsões do seu modelo), ou um sistema completo.\n",
+        "\n",
+        "Tenha em mente os seguintes pontos, importantes para o deploy:\n",
+        "\n",
+        "Os seus novos dados devem ter a mesma distribuição, aquele usado nos dados de treino e validação.\n",
+        "Reveja o seu pipeline e identifique quais pré-processamentos foram feitos.\n",
+        "Reavalie o modelo constantemente. Decida se é necessário retreinar. Caso seja, mude a distribuição que será aplicada.\n"
+      ],
+      "metadata": {
+        "id": "M6Nap1BPLFgh"
       }
     },
     {
