--- a/41_5_Machine_Learning_na_Nuvem.ipynb
+++ b/41_5_Machine_Learning_na_Nuvem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPklEP0U8GDA8JEL0QZqSLv",
+      "authorship_tag": "ABX9TyPKH1hhrFVEDStJ9Hj9M26A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,11 +128,12 @@
         "\n",
         "  --no-browser\n",
         "\n",
+        "\n",
         "Links úteis:\n",
         "\n",
-        "Google Cloud SDK\n",
+        "[Google Cloud SDK](https://cloud.google.com/sdk/docs/install-sdk)\n",
         "\n",
-        "Google Cloud Platform\n",
+        "[Google Cloud Platform](https://cloud.google.com/?utm_source=google&utm_medium=cpc&utm_campaign=latam-BR-all-pt-dr-BKWS-all-all-trial-e-dr-1009897-LUAC0010101&utm_content=text-ad-none-any-DEV_c-CRE_512285710731-ADGP_Hybrid+%7C+BKWS+-+EXA+%7C+Txt+~+GCP_General-KWID_43700062788251521-kwd-301173107424&utm_term=KW_google+cloud-ST_Google+Cloud&gclid=CjwKCAjw7rWKBhAtEiwAJ3CWLF4Tg0ekxO3I_4u0VRRd_BVhkvlIIO67a4Kbwu2hije4R52PoVwXzhoCwHoQAvD_BwE&gclsrc=aw.ds&hl=en)\n",
         "\n"
       ],
       "metadata": {
