--- a/41_5_Machine_Learning_na_Nuvem.ipynb
+++ b/41_5_Machine_Learning_na_Nuvem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKH1hhrFVEDStJ9Hj9M26A",
+      "authorship_tag": "ABX9TyOgknnBTGiuYCh7EVjMZz5b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -138,6 +138,23 @@
       ],
       "metadata": {
         "id": "jMeuaw3gkmU6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **5. Usando o console da AWS**\n",
+        "\n",
+        "A plataforma da AWS traz uma variada gama de tarefas que podemos executar. Com uma interface amigável, simples de usar e com um poderoso Back-end para nos ajudar, essa pode ser uma ferramenta incrível para ser ter à mão!\n",
+        "\n",
+        "Links úteis:\n",
+        "\n",
+        "[AWS Console](https://aws.amazon.com/)\n",
+        "\n",
+        "[Why do we need AWS SageMaker? - Towards Data Science](https://towardsdatascience.com/why-do-we-need-aws-sagemaker-79bce465f19f)"
+      ],
+      "metadata": {
+        "id": "fAO19ybRlPDb"
       }
     },
     {
