--- a/41_5_Machine_Learning_na_Nuvem.ipynb
+++ b/41_5_Machine_Learning_na_Nuvem.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOgknnBTGiuYCh7EVjMZz5b",
+      "authorship_tag": "ABX9TyOkwSHu1XO2d5J0zsUMuAhd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -158,13 +158,22 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "## **✅Checklist**\n",
+        "\n",
+        "\n",
+        "Para considerar este módulo concluído, realize as seguintes atividades:\n",
+        "\n",
+        "Escreva um artigo sobre as diferenças entre cloud e local e as vantagens de cada um.\n",
+        "\n",
+        "Fazer 5 conexões no LinkedIn\n",
+        "\n",
+        "Compartilhar pelo menos 3 posts no LinkedIn"
+      ],
       "metadata": {
-        "id": "yw79z7wph2Hy"
-      },
-      "outputs": [],
-      "source": []
+        "id": "NtQkHLNplmmR"
+      }
     }
   ]
 }
