--- a/44_Deploy_de_Aplicação_Machine_Learning.ipynb
+++ b/44_Deploy_de_Aplicação_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOaT5gXVqJGBMlT98Juu+8/",
+      "authorship_tag": "ABX9TyMlsjaLB61ALghGDkKqbhTP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +55,27 @@
       ],
       "metadata": {
         "id": "xG64aFGhhXeQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Flask ou Django?**\n",
+        "\n",
+        "Qual a diferença entre Django e Flask? Qual é o melhor para minha aplicação?\n",
+        "\n",
+        "É muito importante ter em mente o objetivo e escopo da sua aplicação ao escolher o melhor framework para o seu caso.\n",
+        "\n",
+        "## **Referências**\n",
+        "\n",
+        "[Flask vs Django in 2020: Which framework to choose?](https://hackr.io/blog/flask-vs-django)\n",
+        "\n",
+        "[Django com Henrique Bastos](https://henriquebastos.net/)\n",
+        "\n",
+        "[Deploying Python and Django apps with Heroku](https://devcenter.heroku.com/articles/deploying-python)"
+      ],
+      "metadata": {
+        "id": "H28j_syfiEDi"
       }
     },
     {
