--- a/44_Deploy_de_Aplicação_Machine_Learning.ipynb
+++ b/44_Deploy_de_Aplicação_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlsjaLB61ALghGDkKqbhTP",
+      "authorship_tag": "ABX9TyPmZC7vojEUkX0lWlRnwNUz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,6 +76,31 @@
       ],
       "metadata": {
         "id": "H28j_syfiEDi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Instalando o Python, PyCharm e Heroku CLI**\n",
+        "\n",
+        "Antes de começarmos a trabalhar nosso deploy, precisamos configurar nosso ambiente corretamente. Isso significa instalar todos os pacotes necessários. É sempre uma boa ideia criar um Ambiente Virtual para esse tipo de tarefa.\n",
+        "\n",
+        "## **Referências**\n",
+        "\n",
+        "[Anaconda no Windows ](https://www.youtube.com/watch?v=BP4D-yaxw6E)\n",
+        "\n",
+        "[Anaconda no Mac Inglês ](https://www.youtube.com/watch?v=qd2WNKLoVpI&feature=youtu.be)\n",
+        "\n",
+        "[Anaconda Linux e Windows ](https://www.youtube.com/watch?v=GaPrX6aF2E8&feature=youtu.be)\n",
+        "\n",
+        "[PyCharm no Windows](https://www.youtube.com/watch?v=EZc9SP18110&feature=youtu.be)\n",
+        "\n",
+        "PyCharm no Mac inglês\n",
+        "\n",
+        "Ambientes Virtuais"
+      ],
+      "metadata": {
+        "id": "C3uRhkaBipX2"
       }
     },
     {
