--- a/44_Deploy_de_Aplicação_Machine_Learning.ipynb
+++ b/44_Deploy_de_Aplicação_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmZC7vojEUkX0lWlRnwNUz",
+      "authorship_tag": "ABX9TyP2PD4vSaGmbttbw0ejSBVX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,9 +95,10 @@
         "\n",
         "[PyCharm no Windows](https://www.youtube.com/watch?v=EZc9SP18110&feature=youtu.be)\n",
         "\n",
-        "PyCharm no Mac inglês\n",
+        "[PyCharm no Mac inglês\n",
+        "](https://www.youtube.com/watch?v=oyzH4M6X6F4)\n",
         "\n",
-        "Ambientes Virtuais"
+        "[Ambientes Virtuais ](https://www.youtube.com/watch?v=Yp9EWlKfyqc)"
       ],
       "metadata": {
         "id": "C3uRhkaBipX2"
