--- a/45_Deploy_para_Machine_Learning.ipynb
+++ b/45_Deploy_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/y+Jd7Dclm2mBsdJJJeUA",
+      "authorship_tag": "ABX9TyM8eGWVE5UfrQhVydEPDx1E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,53 @@
         "id": "EcBHFOpJmBMN"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# importar os pacotes necessários\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+        "\n",
+        "import warnings\n",
+        "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
+        "\n",
+        "# importar o dataset para um dataframe\n",
+        "url_dataset = \"https://www.dropbox.com/s/h8blgaphkfpqsn5/sao-paulo-properties-april-2019.csv?dl=1\"\n",
+        "df = pd.read_csv(url_dataset)\n",
+        "\n",
+        "# ver as 5 primeiras entradas\n",
+        "display(df.head())"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Se você também reparar acima, os nomes dos bairros tinham uma informação desnecessária para este *dataset* específico, acrescentando a *string* `\"/São Paulo\"` ao final de cara nome. Usando `df_clean['District'].apply(lambda x: x.split('/')[0]` eu simplesmente removi essa informação e deixei mais limpa a coluna.\n",
+        "\n",
+        "Se você explorar melhor esse *dataset* vai ver que ele contempla duas situações: aluguel ou venda."
+      ],
+      "metadata": {
+        "id": "2fksQua2mY6T"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_clean = df.copy()\n",
+        "\n",
+        "# Limpar os nomes do bairros\n",
+        "df_clean['District'] = df_clean['District'].apply(lambda x: x.split('/')[0])\n",
+        "\n",
+        "# ver as 5 primeiras entradas\n",
+        "df_clean.head()"
+      ],
+      "metadata": {
+        "id": "eyw0rvt_ma5k"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
