--- a/45_Deploy_para_Machine_Learning.ipynb
+++ b/45_Deploy_para_Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmHEgKah0IUzktJobfu+Dy",
+      "authorship_tag": "ABX9TyOAyHfu/34Py/D/lSrKnNQU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -522,7 +522,7 @@
         "id": "eyw0rvt_ma5k",
         "outputId": "c189d750-bcd3-45ff-f702-8727abb515ce"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -951,7 +951,7 @@
         "id": "hSJJMKvPmhKR",
         "outputId": "142e1e24-b75a-4311-a55b-c9481fda5b1b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -994,7 +994,7 @@
         "id": "l4miUa1emu8_",
         "outputId": "f2370358-19fc-48e5-e5aa-e5b000308078"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1034,7 +1034,7 @@
         "id": "FUgtpDSgmytA",
         "outputId": "165e371e-97d2-4cd9-e410-da9f48fcaa77"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1069,7 +1069,7 @@
       "metadata": {
         "id": "1QkcEKZ8m2Mp"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1086,7 +1086,7 @@
         "id": "Mzvulet1m3zR",
         "outputId": "50139d73-db1a-4990-9418-2235d19516da"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1420,7 +1420,7 @@
         "id": "dZJl6Hc9m5OM",
         "outputId": "34504638-9cf3-4937-c0d0-1349594d23d0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1450,7 +1450,7 @@
         "id": "6hDne8Y3m62z",
         "outputId": "0754bd49-00ff-4afe-effe-3a03d17c5a06"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2126,7 +2126,7 @@
         "id": "S1Ov_Ni1nBx5",
         "outputId": "858f1e0b-d60d-4343-8bb2-ed51a932ec2f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2264,7 +2264,7 @@
         "id": "ZyXj6FP8nF0D",
         "outputId": "3e899770-9026-43cb-e9f3-d0bb37849a10"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2754,6 +2754,27 @@
       ],
       "metadata": {
         "id": "3_iNyFGvnYn0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Extra: Salvando e carregando modelos**\n",
+        "\n",
+        "O nosso modelo está treinado e é capaz de realizar previsões. No entanto, está \"preso\" ao kernel rodando dentro do Google Colab.\n",
+        "\n",
+        "Imagine precisar rodar todas as células novamente a cada vez que fosse fazer uma previsão. Seria inviável!\n",
+        "\n",
+        "Para conseguir exportar o modelo de machine learning (na verdade, isso pode ser feito com qualquer estrutura de dados) vou usar a biblioteca joblib.\n",
+        "\n",
+        "\n",
+        "\n",
+        "## **Referências**\n",
+        "\n",
+        "[Model persistance in scikitlearn](https://scikit-learn.org/stable/model_persistence.html)"
+      ],
+      "metadata": {
+        "id": "ZheNCej9jZOp"
       }
     }
   ]
