--- a/46_Deploy_de_Aplicação_Machine_Learning_API.ipynb
+++ b/46_Deploy_de_Aplicação_Machine_Learning_API.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcYBB0UYExgIcFMCXCu+IR",
+      "authorship_tag": "ABX9TyP/2klYff/+suBFKFOVkMB/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,21 @@
       ],
       "metadata": {
         "id": "bo5fpy7_pIL7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Previsões dentro da API**\n",
+        "\n",
+        "Agora que nosso modelo está treinado e salvo, e nossa API pronta, é hora de fazermos previsões dentro dela.\n",
+        "\n",
+        "## **Referências**\n",
+        "\n",
+        "[Making Predictions with a Flask API - Toptal](https://www.toptal.com/python/python-machine-learning-flask-example)"
+      ],
+      "metadata": {
+        "id": "wvaf23v9qKBy"
       }
     },
     {
