--- a/46_Deploy_de_Aplicação_Machine_Learning_API.ipynb
+++ b/46_Deploy_de_Aplicação_Machine_Learning_API.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/2klYff/+suBFKFOVkMB/",
+      "authorship_tag": "ABX9TyPdWODVRG3F91//kVbgMoA/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,24 @@
       ],
       "metadata": {
         "id": "wvaf23v9qKBy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Testando a API com Insomnia**\n",
+        "\n",
+        "Para testar as requisições da nossa API, vamos utilizar a ferramenta Insomnia, que vai nos ajudar a verificar tudo que está acontecendo por trás da nossa aplicação.\n",
+        "\n",
+        "## **Referências**\n",
+        "\n",
+        "[Usando Insomnia para testar requisições de uma API\n",
+        "](https://hcode.com.br/blog/usando-insomnia-para-testar-as-requisicoes-de-nossas-apis)\n",
+        "\n",
+        "[Documentação Insomnia](https://insomnia.rest/)"
+      ],
+      "metadata": {
+        "id": "zR8xAMQ3rACY"
       }
     },
     {
