--- a/46_Deploy_de_Aplicação_Machine_Learning_API.ipynb
+++ b/46_Deploy_de_Aplicação_Machine_Learning_API.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPdWODVRG3F91//kVbgMoA/",
+      "authorship_tag": "ABX9TyOcag9F5hVUzUcU441KJjsm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,6 +78,43 @@
       ],
       "metadata": {
         "id": "zR8xAMQ3rACY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **[PROJETO] Deploy de uma Aplicação**\n",
+        "\n",
+        "Usaremos o framework Flask para fazer o deploy de uma API voltada para aplicações de Machine Learning.\n",
+        "\n",
+        "Pacotes para instalar\n",
+        "pip install gunicorn\n",
+        "pip install sklearn\n",
+        "pip install numpy\n",
+        "pip install flask\n",
+        "pip install flask-restful\n",
+        "Deploy no Heroku\n",
+        "Criar um arquivo \"Procfile\"\n",
+        "Atualizar o Procfile com web: gunicorn app:app\n",
+        "pip3 freeze > requirements.txt\n",
+        "git init\n",
+        "heroku login\n",
+        "heroku create nomedasuaapp\n",
+        "git add .\n",
+        "git commit -m \"Text do Commit\"\n",
+        "heroku git:remote -a nomedasuaapp\n",
+        "git push heroku master\n",
+        "\n",
+        "## **Referências:**\n",
+        "\n",
+        "[Site do Insomnia](https://insomnia.rest/)\n",
+        "\n",
+        "[Heroku CLI](https://devcenter.heroku.com/articles/heroku-cli)\n",
+        "\n",
+        "[Git](https://git-scm.com/)\n"
+      ],
+      "metadata": {
+        "id": "S-5HubnetrcG"
       }
     },
     {
