--- a/47_Deep_Learning.ipynb
+++ b/47_Deep_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYVd39df2KPycyp9nBhWiQ",
+      "authorship_tag": "ABX9TyPlGrPrCnJ7nWgxKDINPChD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,9 +35,9 @@
         "\n",
         "## **Referências**\n",
         "\n",
-        "Especialização em Deep Learning\n",
+        "[Especialização em Deep Learning ](https://www.coursera.org/specializations/deep-learning)\n",
         "\n",
-        "Deep Learning MIT Press Book"
+        "[Deep Learning MIT Press Book ](https://www.deeplearningbook.org/)"
       ],
       "metadata": {
         "id": "mpQ5k54JsmDN"
