--- a/47_Deep_Learning.ipynb
+++ b/47_Deep_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5ixfoelEOpEAl+I9twMiT",
+      "authorship_tag": "ABX9TyMv7Uy+fYuFqlMCXJM1GSVS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,6 +60,29 @@
       ],
       "metadata": {
         "id": "kC6pVvmau-F0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **3. A matemática das redes neurais**\n",
+        "\n",
+        "Apesar de extremamente poderosas, Redes Neurais são complexas, e exigem um certo nível de entendimento do que está acontecendo por trás delas. Para isso, nessa aula falamos um pouco mais sobre a matemática por trás das Redes Neurais.\n",
+        "\n",
+        "\n",
+        "\n",
+        "## **Referências**\n",
+        "\n",
+        "[Deep dive into the Math behind Neural Networks](https://towardsdatascience.com/https-medium-com-piotr-skalski92-deep-dive-into-deep-networks-math-17660bc376ba)\n",
+        "\n",
+        "[The Math behind Artificial Neural Networks](https://towardsdatascience.com/the-heart-of-artificial-neural-networks-26627e8c03ba)\n",
+        "\n",
+        "[Demystifying the Mathematics Behind Convolutional Neural Networks](https://www.analyticsvidhya.com/blog/2020/02/mathematics-behind-convolutional-neural-network/)\n",
+        "\n",
+        "[A Beginner's Guide to the Mathematics of Neural Networks](https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.161.3556&rep=rep1&type=pdf)"
+      ],
+      "metadata": {
+        "id": "anZtSRyAwvx3"
       }
     },
     {
