--- a/48_TensorFlow_e_Keras.ipynb
+++ b/48_TensorFlow_e_Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNq8E38DpQEALDyMFPWd7fV",
+      "authorship_tag": "ABX9TyOAxv2dp9JbRc7iun7x++6n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,70 @@
       ],
       "metadata": {
         "id": "R4G4TRM2-x_z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Exemplo de aplicação do Tensorflow\n",
+        "\n",
+        "***Fashion MNIST*** é um *dataset* considerado o *Hello, World!* de **Deep Learning** aplicado a problemas de **Visão Computacional**.\n",
+        "\n",
+        "Contendo 60 mil imagens para treinamento e 10 mil para teste, é um *dataset* bem melhor que o antigo **MNIST** (que continha apenas digitos manuscritos).\n",
+        "\n",
+        "<p align=\"center\"><img src=\"https://raw.githubusercontent.com/carlosfab/escola-data-science/master/img/fashion-mnist-sprite.png\" height=\"400px\"></p>\n",
+        "\n",
+        "Ao total, as 70 mil imagens têm dimensões de 28 x 28 *pixels*, como mostra a imagem acima. Cada uma dessas imagens é classificada com um desses 10 *labels*:\n",
+        "\n",
+        "<table>\n",
+        "  <tbody><tr>\n",
+        "    <th>Label</th>\n",
+        "    <th>Class</th>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>0</td>\n",
+        "    <td>T-shirt/top</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td>1</td>\n",
+        "    <td>Trouser</td>\n",
+        "  </tr>\n",
+        "    <tr>\n",
+        "    <td>2</td>\n",
+        "    <td>Pullover</td>\n",
+        "  </tr>\n",
+        "    <tr>\n",
+        "    <td>3</td>\n",
+        "    <td>Dress</td>\n",
+        "  </tr>\n",
+        "    <tr>\n",
+        "    <td>4</td>\n",
+        "    <td>Coat</td>\n",
+        "  </tr>\n",
+        "    <tr>\n",
+        "    <td>5</td>\n",
+        "    <td>Sandal</td>\n",
+        "  </tr>\n",
+        "    <tr>\n",
+        "    <td>6</td>\n",
+        "    <td>Shirt</td>\n",
+        "  </tr>\n",
+        "    <tr>\n",
+        "    <td>7</td>\n",
+        "    <td>Sneaker</td>\n",
+        "  </tr>\n",
+        "    <tr>\n",
+        "    <td>8</td>\n",
+        "    <td>Bag</td>\n",
+        "  </tr>\n",
+        "    <tr>\n",
+        "    <td>9</td>\n",
+        "    <td>Ankle boot</td>\n",
+        "  </tr>\n",
+        "</tbody></table>"
+      ],
+      "metadata": {
+        "id": "FGJGo1Qi_JMZ"
       }
     },
     {
