--- a/48_TensorFlow_e_Keras.ipynb
+++ b/48_TensorFlow_e_Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN71PsQBo2qlcC1v06jL8dS",
+      "authorship_tag": "ABX9TyMioUkLx1YTbtAkLWFWRnQj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -325,6 +325,84 @@
           "text": [
             "313/313 [==============================] - 2s 6ms/step - loss: 1.7196 - accuracy: 0.7306\n",
             "[1.7195686101913452, 0.7305999994277954]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Modelos de Redes Neurais Convolucionais"
+      ],
+      "metadata": {
+        "id": "P1XLgl6-Bc3S"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# criar modelo de CNN\n",
+        "model2 = keras.Sequential()\n",
+        "\n",
+        "# definir a arquitetura da rede neural\n",
+        "model2.add(keras.layers.Conv2D(filters=64, kernel_size=2, padding='same', activation='relu', input_shape=(28,28,1)))\n",
+        "model2.add(keras.layers.MaxPooling2D(pool_size=2))\n",
+        "model2.add(keras.layers.Dropout(0.3))\n",
+        "model2.add(keras.layers.Conv2D(filters=32, kernel_size=2, padding='same', activation='relu'))\n",
+        "model2.add(keras.layers.MaxPooling2D(pool_size=2))\n",
+        "model2.add(keras.layers.Dropout(0.3))\n",
+        "model2.add(keras.layers.Flatten())\n",
+        "model2.add(keras.layers.Dense(256, activation='relu'))\n",
+        "model2.add(keras.layers.Dropout(0.5))\n",
+        "model2.add(keras.layers.Dense(10, activation='softmax'))\n",
+        "\n",
+        "# Ver a aarquitetura do modelo 3\n",
+        "model2.summary()"
+      ],
+      "metadata": {
+        "id": "s8r4Bf6EBi4X",
+        "outputId": "0fac8726-0958-4afd-9677-ab468bd3ffa4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential_1\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " conv2d (Conv2D)             (None, 28, 28, 64)        320       \n",
+            "                                                                 \n",
+            " max_pooling2d (MaxPooling2  (None, 14, 14, 64)        0         \n",
+            " D)                                                              \n",
+            "                                                                 \n",
+            " dropout (Dropout)           (None, 14, 14, 64)        0         \n",
+            "                                                                 \n",
+            " conv2d_1 (Conv2D)           (None, 14, 14, 32)        8224      \n",
+            "                                                                 \n",
+            " max_pooling2d_1 (MaxPoolin  (None, 7, 7, 32)          0         \n",
+            " g2D)                                                            \n",
+            "                                                                 \n",
+            " dropout_1 (Dropout)         (None, 7, 7, 32)          0         \n",
+            "                                                                 \n",
+            " flatten_1 (Flatten)         (None, 1568)              0         \n",
+            "                                                                 \n",
+            " dense_2 (Dense)             (None, 256)               401664    \n",
+            "                                                                 \n",
+            " dropout_2 (Dropout)         (None, 256)               0         \n",
+            "                                                                 \n",
+            " dense_3 (Dense)             (None, 10)                2570      \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 412778 (1.57 MB)\n",
+            "Trainable params: 412778 (1.57 MB)\n",
+            "Non-trainable params: 0 (0.00 Byte)\n",
+            "_________________________________________________________________\n"
           ]
         }
       ]
