--- a/48_TensorFlow_e_Keras.ipynb
+++ b/48_TensorFlow_e_Keras.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMioUkLx1YTbtAkLWFWRnQj",
+      "authorship_tag": "ABX9TyOFla6fSCGGnyB6W/roAQEk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -360,11 +360,11 @@
         "model2.summary()"
       ],
       "metadata": {
-        "id": "s8r4Bf6EBi4X",
-        "outputId": "0fac8726-0958-4afd-9677-ab468bd3ffa4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s8r4Bf6EBi4X",
+        "outputId": "0fac8726-0958-4afd-9677-ab468bd3ffa4"
       },
       "execution_count": 6,
       "outputs": [
@@ -406,6 +406,30 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Introdução ao TensorFlow e Keras**\n",
+        "\n",
+        "Uma das principais ferramentas para usar Deep Learning é o Tensorflow. Nessa aula, vamos nos aprofundar um pouco mais nesse tema, usando a biblioteca Tensorflow, que recentemente foi atualizada para a versão 2.0. Atenção para a incorporação do Keras ao Tensorflow 2.0!\n",
+        "\n",
+        "\n",
+        "\n",
+        "## **Referências**\n",
+        "\n",
+        "[What's coming in Tensorflow 2.0](https://blog.tensorflow.org/2019/01/whats-coming-in-tensorflow-2-0.html)\n",
+        "\n",
+        "[Tensorflow\n",
+        "](https://www.tensorflow.org/)\n",
+        "\n",
+        "[Tensorflow 2 Quickstart for Beginners](https://www.tensorflow.org/tutorials/quickstart/beginner)\n",
+        "\n",
+        "[Tensorflow 2 Quickstart for Experts](https://www.tensorflow.org/tutorials/quickstart/advanced)"
+      ],
+      "metadata": {
+        "id": "M4lUMuWqCHyl"
+      }
     }
   ]
 }
