--- a/49_Prevendo_preços_de_imóveis_com_Redes_Neurais.ipynb
+++ b/49_Prevendo_preços_de_imóveis_com_Redes_Neurais.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAt9GCqhQZ7nSXm1l6nBUo",
+      "authorship_tag": "ABX9TyNN7YjmnQqhSZtLNOdxsrtg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +38,23 @@
       ],
       "metadata": {
         "id": "9EZR8HjuyXbf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Prevendo preços de imóveis com Redes Neurais\n",
+        "\n",
+        "Para demonstrar como as redes neurais podem ser usadas para um problema de regressão, para prever preços de venda de imóveis, vou usar o conhecido *dataset* California housing.\n",
+        "\n",
+        "<center><img src=\"https://www.wartsila.com/images/default-source/default-album/california_housing.tmb-1920x690.jpg?sfvrsn=126bc44_1\" width=\"80%\"></center>\n",
+        "\n",
+        "\n",
+        "\n",
+        "A maneira que iremos construir a arquitetura de redes neurais é por meio da API `Sequential` do `keras`.\n"
+      ],
+      "metadata": {
+        "id": "1w2UBAPu08Si"
       }
     },
     {
